--- a/build.gradle
+++ b/build.gradle
@@ -40,8 +40,8 @@ subprojects {
         jcenter()
         mavenCentral()
         maven { url 'https://jitpack.io' }
-        maven { url "https://nexus.motechproject.org/content/repositories/drishti" }
-        maven { url "https://nexus.motechproject.org/content/repositories/snapshots" }
+        maven { url "http://nexus.motechproject.org/content/repositories/drishti" }
+        maven { url "http://nexus.motechproject.org/content/repositories/snapshots" }
         maven { url "https://acra.googlecode.com/svn/repository/releases" }
         maven { url "https://repo.maven.apache.org/maven2" }
         maven { url "https://cloudant.github.io/cloudant-sync-eap/repository" }
