--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,7 @@ subprojects {
         maven { url "https://repo.maven.apache.org/maven2" }
         maven { url "https://cloudant.github.io/cloudant-sync-eap/repository" }
         maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
+        maven { url 'https://s3.amazonaws.com/repo.commonsware.com' }
         mavenLocal()
     }
 
