KS | Chore; Added a tag to hold extra information from the form and send it to simprints. extra info will take JSON object in which the key is the name of the information needed and the value is the name of the field to get the values from.

--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,7 @@ subprojects {
         maven { url "https://repo.maven.apache.org/maven2" }
         maven { url "http://cloudant.github.io/cloudant-sync-eap/repository" }
         maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
+        maven { url 'https://s3.amazonaws.com/repo.commonsware.com' }
         mavenLocal()
     }
 
