--- a/android-json-form-wizard/build.gradle
+++ b/android-json-form-wizard/build.gradle
@@ -79,7 +79,7 @@ def githubProperties = new Properties()
 githubProperties.load(new FileInputStream(rootProject.file("github.properties")))
 
 def getVersionName = { ->
-    return "1.7.22-SNAPSHOT" // Library version
+    return "1.7.26-DTREE-MLS-SNAPSHOT" // Library version
 }
 
 def getArtificatId = { ->
