--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,7 @@ buildscript {
     repositories {
         google()
         mavenCentral()
-        jcenter()
-        maven { url 'https://plugins.gradle.org/m2' }
+        maven{  url 'https://plugins.gradle.org/m2/' }
     }
 
     dependencies {
@@ -20,12 +19,11 @@ configure(allprojects) { project ->
         group = GROUP
 
         repositories {
-            jcenter()
             mavenCentral()
             maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
             maven { url 'https://plugins.gradle.org/m2/'}
             mavenLocal()
-            google()
+            jcenter()
         }
     }
 }
@@ -44,17 +42,15 @@ subprojects {
     ext.androidAnnotationsAPIVersion = '3.0.1'
 
     repositories {
-        jcenter()
         mavenCentral()
         maven { url 'https://jitpack.io' }
-        maven { url "http://nexus.motechproject.org/content/repositories/drishti" }
-        maven { url "http://nexus.motechproject.org/content/repositories/snapshots" }
         maven { url "https://acra.googlecode.com/svn/repository/releases" }
         maven { url "https://repo.maven.apache.org/maven2" }
         maven { url "https://cloudant.github.io/cloudant-sync-eap/repository" }
         maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
         maven { url 'https://s3.amazonaws.com/repo.commonsware.com' }
         mavenLocal()
+        jcenter()
     }
 
     // Improve build server performance by allowing disabling of pre-dexing
